day1 (2026-06-10)
Microsoft Windows [Version 10.0.26200.6899]
(c) Microsoft Corporation. All rights reserved.

C:\Users\dcsuser>mkdir csc209s3

C:\Users\dcsuser>cd ./csc209s3

C:\Users\dcsuser\csc209s3>python --version
Python 3.12.5

C:\Users\dcsuser\csc209s3>python -m venv my_env

C:\Users\dcsuser\csc209s3>my_env\Scripts\activate

(my_env) C:\Users\dcsuser\csc209s3>python
Python 3.12.5 (tags/v3.12.5:ff3bc82, Aug  6 2024, 20:45:27) [MSC v.1940 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 5+3
8
>>> 10/3
3.3333333333333335
>>> 10//3
3
>>> 10%3
1
>>> 2**4
16
>>> 9**0.5
3.0
>>> 2+3*4
14
>>> (2+3)*4
20
>>> 2**100
1267650600228229401496703205376
>>> 2**20!
  File "<stdin>", line 1
    2**20!
         ^
SyntaxError: invalid syntax
>>> 2**5213654
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: Exceeds the limit (4300 digits) for integer string conversion; use sys.set_int_max_str_digits() to increase the limit
>>> 0.1+0.2
0.30000000000000004
>>> format(0.1,".20f")
'0.10000000000000000555'
>>> import math
>>> math.sqrt(16)
4.0
>>> math.factorial(5)
120
>>> math.gcd(48,18)
6
>>> math.pi
3.141592653589793
>>> math.e
2.718281828459045
>>> math.sin(30)
-0.9880316240928618
>>> math.sin(60)
-0.3048106211022167
>>> math.sin(0.5)
0.479425538604203
>>> math.tan(45)
1.6197751905438615
>>> math.sin(math.pi/2)
1.0
>>> math.tan(math.pi/2)
1.633123935319537e+16
>>> math.tan(math.pi)
-1.2246467991473532e-16
>>> math.tan(math.pi/4)
0.9999999999999999
>>> math.radians(180)
3.141592653589793
>>> 28mod4
  File "<stdin>", line 1
    28mod4
     ^
SyntaxError: invalid decimal literal
>>> 28%4 == 0
True
>>> 37/2 ==0
False
>>> 999%10
9
>>> if(28%4 == 0)
  File "<stdin>", line 1
    if(28%4 == 0)
                 ^
SyntaxError: expected ':'
>>> if(28%4 == 0):
... print("Divisible")
  File "<stdin>", line 2
    print("Divisible")
    ^
IndentationError: expected an indented block after 'if' statement on line 1
>>> if(28%4 == 0):
...     print("Divisible")
... else
  File "<stdin>", line 3
    else
        ^
SyntaxError: expected ':'
>>> if(28%4 == 0):
...     print("Divisible")
... else:
...     print("Not Divisible")
...
KeyboardInterrupt
>>> >>> if (28 % 4 == 0):
  File "<stdin>", line 1
    >>> if (28 % 4 == 0):
    ^^
SyntaxError: invalid syntax
>>> ...     print("Divisible")
  File "<stdin>", line 1
    ...     print("Divisible")
            ^^^^^
SyntaxError: invalid syntax
>>> ...
Ellipsis
>>> if(28%4 == 0):
...     print("Divisible")
...
Divisible
>>> if (37/2==0):
...     print("Even")
... else:
...     print("odd")
...
odd
>>> 999%10
9
>>> x = 6
>>> area = x*x
>>> print(area)
36
>>> x = 11
>>> perimeter = x*4
>>> print(perimeter)
44
>>> x = 8
>>>  area = x*x
  File "<stdin>", line 1
    area = x*x
IndentationError: unexpected indent
>>> x = 8
>>> print("area = ",area," ","perimeter = ",perimeter)
area =  36   perimeter =  44
>>> triX = 3
>>> triY = 4
>>> triZ = 5
>>> triArea = 0.5 * triX * triY
>>> print(triArea)
6.0
>>> triX = 12
>>> triY = 9
>>> print("area = ",triArea)
area =  6.0
>>> math.log(100,10)
2.0
>>> math.log(16,4)
2.0
>>> math.log2(16)
4.0
>>> math.sqrt(-1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: math domain error
>>> z1 = 3 + 4j
>>> z2 = 1 - 2j
>>> z1+z2
(4+2j)
>>> z1.real
3.0
>>> z1.imag
4.0
>>> abs(-1)
1
>>> abs(z1)
5.0
>>> cmath.sqrt(-1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'cmath' is not defined. Did you mean: 'math'? Or did you forget to import 'cmath'?
>>> def area(x, y):
...     return 0.5 * x * y
...
>>> triX = 3
>>> triY = 4
>>> print(area(triX, triY))  # 6.0
6.0
>>>
>>> triX = 12
>>> triY = 9
>>>
KeyboardInterrupt
>>> def area(x,y):
...     return 0.5*x*y
...
>>> triX = 9
>>> triY = 12
>>> print(area(triX, triY))
54.0
>>> import cmath
>>> cmath.sqrt(-1)
1j
>>> type(1j)
<class 'complex'>
>>> (1j*cmath.pi)**cmath.exp
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for ** or pow(): 'complex' and 'builtin_function_or_method'
>>> (1j*cmath.pi)**cmath.exp(1)
(-9.617455429221998-20.29577090147464j)
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>> decimal('0.1') + decimal('0.2')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'decimal' is not defined. Did you forget to import 'decimal'?
>>> Decimal('0.1') + Decimal('0.2')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'Decimal' is not defined
>>> import decimal
>>> Decimal('0.1') + Decimal('0.2')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'Decimal' is not defined. Did you mean: 'decimal'?
>>> decimal('0.1') + decimal('0.2')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'module' object is not callable
>>> from decimal import Decimal
>>> decimal('0.1') + decimal('0.2')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'module' object is not callable
>>> Decimal('0.1') + Decimal('0.2')
Decimal('0.3')
>>> Decimal(1)/Decimal(7)
Decimal('0.1428571428571428571428571429')
>>>from fraction import Fraction
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'fraction'
>>> from fractions import Fraction
>>> f1 = Fraction(1,3)
>>> f2 = Fraction(1,6)
>>> f1 + f2
Fraction(1, 2)
>>> Fraction('0.125')
Fraction(1, 8)
>>> import numpy as np
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'numpy'
>>>
